# algopraxis.joeyliu

./: .gitignore  .travis.yml  README.md  requirements.txt
algopraxis/: admin.py  forms.py  models.py  urls.py  views.py
algopraxis/api/: mixins.py  paginations.py  permissons.py  serializers.py  views.py
algopraxis/migrations/: 0001_initial.py
algopraxis/templates/algopraxis/: signin.html
api/: handlers.py  models.py  serializers.py  tests.py  urls.py
api/auth/: authentication.py  exceptions.py  urls.py  utils.py
api/jwt_auth/: serializers.py  views.py
api/migrations/: 0001_initial.py
api/tests/: models.py  serializers.py  test_models.py  test_serializers.py
api/v1/: paginations.py  permissons.py  serializers.py  urls.py  views.py
bash/: celery.sh  run.dev.bash
coderunner/: __init__.py  celery.py  config.py  runner.py  runnerfacotry.py  tasks.py
deploy/: requirements.txt
parts/: widgets.py
project/: urls.py
project/settings/: base.py  default.py  dev.py  prod.py  testing.py
project/templates/: 404.html
src/algopraxis/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/coderunner/: __init__.py  celery.py  config.py  runner.py  runnerfacotry.py  tasks.py
src/coderunner/workplace/c_cpp/parser/: .gitignore  CMakeLists.txt  build.sh
src/coderunner/workplace/c_cpp/parser/include/: BaseParser.h  Factory.h  Parser.h
src/coderunner/workplace/c_cpp/parser/lib/: libparser.dylib
src/coderunner/workplace/c_cpp/parser/src/: Factory.cpp
src/parts/: widgets.py
src/project/: __init__.py  celery.py  urls.py
(+85 files in other folders)
